--- a/html-demos/index.html
+++ b/html-demos/index.html
@@ -14,21 +14,12 @@
     <br />
 
     <p>Using span</p>
-    <p>This is another pararagraph. This is another pararagraph. This is another pararagraph. This is another
-        pararagraph.<span>This is another pararagraph. </span>
-        This is another pararagraph. This is another pararagraph. <span>This is another pararagraph. </span>This is
-        another pararagraph. This is another
-        pararagraph. This is another pararagraph. <span>This is another pararagraph. </span>This is another pararagraph.
-        This is another pararagraph. This is another pararagraph.</p>
+    <p><span>span </span> <span>span </span> <span>span </span> <span>span </span> <span>span </span> <span>span </span>
+    </p>
     <hr />
     <p>Using div</p>
-    <p>This is another pararagraph. This is another pararagraph. This is another pararagraph. This is another
-        pararagraph.
-    <div>This is another pararagraph. </div>
-    This is another pararagraph. This is another pararagraph. <div>This is another pararagraph. </div>This is another
-    pararagraph. This is another
-    pararagraph. This is another pararagraph. <div>This is another pararagraph. </div>This is another pararagraph.
-    This is another pararagraph. This is another pararagraph.</p>
+    <p><div>div </div> <div>div </div><div>div </div><div>div </div><div>div </div><div>div </div>
+    </p>
 
 
 </body>
