--- a/html-demos/index.html
+++ b/html-demos/index.html
@@ -14,12 +14,15 @@
     <br />
 
     <p>Using span</p>
+    <p>span span span span span span </p>
     <p><span>span </span> <span>span </span> <span>span </span> <span>span </span> <span>span </span> <span>span </span>
     </p>
     <hr />
     <p>Using div</p>
     <p><div>div </div> <div>div </div><div>div </div><div>div </div><div>div </div><div>div </div>
     </p>
+    <a></a>
+    <img >
 
 
 </body>
