--- a/html-demos/02-basic-html-elements.html
+++ b/html-demos/02-basic-html-elements.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
+
     <h1>Adding Links / Hyperlinks</h1>
     <p>"a" tag is used to add links to a webpage.</p>
     <a href="https://github.com/vamandeshmukh/cg-html-css-js-bs/tree/main/html-demos">This is a link</a>
+    <a href="https://www.capgemini.com/">This is another link</a>
+    <a href="./index.html">This is yet another link</a>
 
 
 
