--- a/html-demos/03-html-adding-images.html
+++ b/html-demos/03-html-adding-images.html
@@ -12,6 +12,8 @@
     <img src="https://media.glassdoor.com/sqll/28187/capgemini-engineering-squareLogo-1619089249697.png">
     <p>Image from local folder</p>
     <img src="./sample-image.png">
+    <p>Image from another local folder</p>
+    <img src="./sample-image.png">
 
 </body>
 
