--- a/html-demos/03-html-adding-images.html
+++ b/html-demos/03-html-adding-images.html
@@ -9,11 +9,11 @@
     <h1>Images in HTML</h1>
     <hr />
     <p>Image from external source</p>
-    <img src="https://media.glassdoor.com/sqll/28187/capgemini-engineering-squareLogo-1619089249697.png">
+    <img height="100px" src="https://media.glassdoor.com/sqll/28187/capgemini-engineering-squareLogo-1619089249697.png">
     <p>Image from local folder</p>
-    <img src="./sample-image.png">
+    <img height="200px" src="./sample-image.png" alt="Two Chipmunks">
     <p>Image from another local folder</p>
-    <img src="./sample-image.png">
+    <img height="150px" src="./images/sample-image-2.png" alt="Chipmunks">
 
 </body>
 
