--- a/html-demos/06-html-with-bootstrap.html
+++ b/html-demos/06-html-with-bootstrap.html
@@ -24,7 +24,9 @@
     <h1 style="color: orange; font-family: 'Trebuchet MS';">HTML with inline CSS</h1>
     <h1 class="my-style-1">HTML with internal CSS</h1>
     <h1 id="my-style-2">HTML with internal CSS</h1>
+    
     <h1 class="my-style-3">HTML with external CSS</h1>
+    <h1 class="my-style-4">HTML with external CSS</h1>
 
     <hr />
     <p>CSS is used to style HTML</p>
