--- a/html-demos/06-html-with-bootstrap.html
+++ b/html-demos/06-html-with-bootstrap.html
@@ -2,40 +2,20 @@
 <html>
 
 <head>
-
-    <style>
-        .my-style-1 {
-            color: orange;
-            font-family: 'Trebuchet MS';
-        }
-
-        #my-style-2 {
-            color: blue;
-            font-family: Verdana;
-        }
-    </style>
-
-    <link rel="stylesheet" href="./styles.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <h1>HTML without CSS</h1>
-    <h1 style="color: orange; font-family: 'Trebuchet MS';">HTML with inline CSS</h1>
-    <h1 class="my-style-1">HTML with internal CSS</h1>
-    <h1 id="my-style-2">HTML with internal CSS</h1>
-    
-    <h1 class="my-style-3">HTML with external CSS</h1>
-    <h1 class="my-style-4">HTML with external CSS</h1>
+    <div class="container">
+        <h1 class="display-1">HTML with Bootstrap</h1>
+        <hr />
+        <p class="text-primary">This is a paragraph. </p>
+        <hr />
+    </div>
 
-    <hr />
-    <p>CSS is used to style HTML</p>
-
-    <p>This is a paragraph. </p>
-
-
-
-    <hr />
 </body>
 
 </html>
