--- a/html-demos/06-html-with-bootstrap.html
+++ b/html-demos/06-html-with-bootstrap.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <h1 class="display-1">HTML with Bootstrap</h1>
+        <h1 class="display-1 text-primary">HTML with Bootstrap</h1>
         <hr />
         <p class="text-primary">This is a paragraph. </p>
         <hr />
