--- a/html-demos/06-html-with-bootstrap.html
+++ b/html-demos/06-html-with-bootstrap.html
@@ -7,13 +7,25 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Bootstrap documentation: 
+    https://getbootstrap.com/docs/4.6/getting-started/introduction/ -->
+
 </head>
 
 <body>
     <div class="container">
         <h1 class="display-1 text-primary">HTML with Bootstrap</h1>
         <hr />
-        <p>This is a paragraph. </p>
+        <p class="text-danger">This is a paragraph. text-danger</p>
+        <p class="text-warning">This is a paragraph. text-warning</p>
+        <p class="text-success">This is a paragraph. text-success</p>
+        <p class="text-dark">This is a paragraph. text-dark</p>
+        <p class="text-light">This is a paragraph. text-light</p>
+        <p class="text-white">This is a paragraph. text-white</p>
+        <p class="text-info">This is a paragraph. text-info</p>
+        <p class="text-primary">This is a paragraph. text-primary</p>
+        <p class="text-secondary">This is a paragraph. text-secondary</p>
+
         <hr />
     </div>
 
