--- a/html-demos/06-html-with-bootstrap.html
+++ b/html-demos/06-html-with-bootstrap.html
@@ -11,11 +11,13 @@
     https://getbootstrap.com/docs/4.6/getting-started/introduction/ -->
 
 </head>
+<!-- this is a comment.  -->
 
 <body>
     <div class="container">
-        <h1 class="display-1 text-primary">HTML with Bootstrap</h1>
+        <h1 class="display-4 text-primary">HTML with Bootstrap</h1>
         <hr />
+        <p class="lead">Contextual colors for text</p>
         <p class="text-danger">This is a paragraph. text-danger</p>
         <p class="text-warning">This is a paragraph. text-warning</p>
         <p class="text-success">This is a paragraph. text-success</p>
@@ -25,7 +27,19 @@
         <p class="text-info">This is a paragraph. text-info</p>
         <p class="text-primary">This is a paragraph. text-primary</p>
         <p class="text-secondary">This is a paragraph. text-secondary</p>
-
+        <p class="text-muted">This is a paragraph. text-muted</p>
+        <hr />
+        <p class="lead">Contextual colors for background</p>
+        <p class="bg-danger">This is a paragraph. bg-danger</p>
+        <p class="bg-warning">This is a paragraph. bg-warning</p>
+        <p class="bg-success">This is a paragraph. bg-success</p>
+        <p class="bg-dark">This is a paragraph. bg-dark</p>
+        <p class="bg-light">This is a paragraph. bg-light</p>
+        <p class="bg-white">This is a paragraph. bg-white</p>
+        <p class="bg-info">This is a paragraph. bg-info</p>
+        <p class="bg-primary">This is a paragraph. bg-primary</p>
+        <p class="bg-secondary">This is a paragraph. bg-secondary</p>
+        <p class="bg-muted">This is a paragraph. bg-muted</p>
         <hr />
     </div>
 
