--- a/html-demos/06-html-with-bootstrap.html
+++ b/html-demos/06-html-with-bootstrap.html
@@ -41,6 +41,18 @@
         <p class="bg-secondary">This is a paragraph. bg-secondary</p>
         <p class="bg-muted">This is a paragraph. bg-muted</p>
         <hr />
+        <p class="lead">Using multiple classes </p>
+        <p class="bg-warning text-danger">This is a paragraph. bg-danger</p>
+        <hr />
+        <p class="lead">Using display classes </p>
+        <h1 class="display-1 text-primary">HTML with Bootstrap</h1>
+        <hr />
+        <h1 class="display-2 text-primary">HTML with Bootstrap</h1>
+        <hr />
+        <h1 class="display-3 text-primary">HTML with Bootstrap</h1>
+        <hr />
+        <h1 class="display-4 text-primary">HTML with Bootstrap</h1>
+        <hr />
     </div>
 
 </body>
