--- a/html-demos/06-html-with-bootstrap-2.html
+++ b/html-demos/06-html-with-bootstrap-2.html
@@ -15,13 +15,14 @@
 
 <body class="bg-light">
     <div class="container mt-3 mb-3">
-        <h1 class="display-4 text-primary">Capgemini</h1>
+        <h1 class="display-4 text-center text-primary">Capgemini</h1>
         <hr />
         <div class="col-4 mt-3 mb-3 pt-3 pb-3 shadow bg-white">
-            <p class="lead">Capgemini 2022</p>
-            <img height="150px"
+            <p class="lead text-center">Capgemini 2022</p>
+            <img class="px-3" height="150px"
                 src="https://wherewomenwork.s3-eu-west-1.amazonaws.com/insight/capgemini-bike-large-89.jpg">
-            <p class="mt-3">Capgemini SE is a French multinational information technology (IT) services and consulting
+            <p class="mt-3 text-justify">Capgemini SE is a French multinational information technology (IT) services and
+                consulting
                 company. It is
                 headquartered in Paris, France.[3]
                 Capgemini was founded by Serge Kampf in 1967[4] as an enterprise management and data processing company.
