--- a/html-demos/06-html-with-bootstrap-2.html
+++ b/html-demos/06-html-with-bootstrap-2.html
@@ -22,12 +22,11 @@
             <img class="px-3" height="150px"
                 src="https://wherewomenwork.s3-eu-west-1.amazonaws.com/insight/capgemini-bike-large-89.jpg">
             <p class="mt-3 text-justify">Capgemini SE is a French multinational information technology (IT) services and
-                consulting
-                company. It is
-                headquartered in Paris, France.[3]
-                Capgemini was founded by Serge Kampf in 1967[4] as an enterprise management and data processing company.
+                consulting company. It is headquartered in Paris, France. </p>
+            <p class="text-justify"> Capgemini was founded by Serge Kampf in 1967 as an enterprise management and
+                data processing company.
                 The company was founded as the Société pour la Gestion de l'Entreprise et le Traitement de l'Information
-                (Sogeti).[citation needed]
+                (Sogeti).
             </p>
         </div>
         <hr />
