--- a/js-demos/index.html
+++ b/js-demos/index.html
@@ -3,17 +3,15 @@
 
 <head>
 
+    <script src="./script.js"></script>
+
     <script>
         fun2 = () => {
             let message = "Internal JS";
             console.log(message);
         }
     </script>
-
 </head>
-
-<!-- HTML CSS JS  -->
-
 
 <body>
     <h1>JavaScript Demo</h1>
@@ -30,6 +28,11 @@
     <div>
         <p>Internal JavaScript</p>
         <script>fun2();</script>
+    </div>
+    <div>
+        <p>External JavaScript</p>
+        <script>fun3();</script>
+
     </div>
 </body>
 
